--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "mqtt": "^2.17.0",
+    "@material-ui/core": "^1.4.0",
+    "material-ui": "^0.20.1",
+    "mqtt": "^2.18.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-swipeable": "^4.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
